# eeg-creative-decoding

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
eeg_creative_decoding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: Final_ML_Project_archived_drive.ipynb  README.md
results/: README.md
results/experiments/creativity_cross_eegnet/: _DONE  config.json  confusion_matrix.npy  history.json  metrics.json  notes.json  predictions.npz
results/experiments/creativity_cross_logreg/: _DONE  config.json  confusion_matrix.npy  history.json  metrics.json  model.joblib  notes.json  predictions.npz
results/experiments/creativity_to_design_eegnet/: _DONE  config.json  confusion_matrix.npy  history.json  metrics.json  notes.json  predictions.npz
results/experiments/creativity_to_design_rest_ig_eegnet/: _DONE  config.json  confusion_matrix.npy  history.json  metrics.json  notes.json  predictions.npz
results/experiments/creativity_within_eegnet/: _DONE  config.json  confusion_matrix.npy  history.json  notes.json  (+2 more)
results/tables/: creativity_cross_subject_best_confusion_matrix_creativity_cross_eegnet.csv  creativity_within_subject_best_confusion_matrix_creativity_within_logreg.csv  design_cross_subject_best_confusion_matrix_design_cross_eegnet.csv  design_within_subject_best_confusion_matrix_design_within_logreg.csv  report_all_results_segment_level.csv  table_cross_dataset_transfer_segment.csv  table_cross_subject_segment.csv  table_within_subject_segment.csv
scripts/: build_caches.py  build_raw_windows_h5.py  download_data.py  download_data_gdrive.py  generate_report_artifacts.py  run_experiment.py
src/: Or_checkParticipantEEG.m  config.py  data_loader.py  deep_models.py  deep_utils.py  eeg_utils.py  experiment_io.py  experiment_registry.py  io_utils.py  labels.py  paths.py  reporting.py  runners.py
(+80 files in other folders)
