[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-creative-decoding"
version = "0.1.0"
description = "EEG-based classification of design and creativity cognitive states"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "h5py",
    "joblib",
    "scikit-learn",
    "matplotlib",
    "torch",
    "gdown",
]

[tool.setuptools]
packages = ["src"]